--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "json-api-server",
+  "name": "currency-exchange-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
