--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "currency-exchange-api",
   "version": "1.0.0",
   "main": "server.js",
+  "engines": {
+    "node": "16.18.1"
+  },
   "scripts": {
     "start": "node server.js"
   },
