--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "currency-exchange-api",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "16.18.1"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
